<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/nameHint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surname"
        android:hint="@string/surnameHint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sex"
        android:hint="@string/sexChoice" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseExperience"
        android:clickable="false"
        android:layout_marginTop="5dp"
        android:text="@string/experienceChoice"/>

    <Spinner
        android:id="@+id/ExperienceSpinner"
        android:layout_height="wrap_content"
        android:prompt="@+string/experience"
        android:layout_width="fill_parent"
        android:padding="6dp"
        android:entries="@array/experience"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Finito!"
        android:onClick="clickbutton"/>

</LinearLayout>